--- a/src/ui/widgets/input_test.html
+++ b/src/ui/widgets/input_test.html
@@ -46,7 +46,7 @@
   var input1 = new recoil.ui.widgets.InputWidget(scope);
   input1.attachStruct({value : val,
       editable : editableB,
-      enabled : enabledB
+      enabled : enabledB, immediate: true
   });
   label.getComponent().render($('label1'));
   label.attach(val);
@@ -69,7 +69,7 @@
   input2.attach('fish',editableB,recoil.ui.BoolWithExplanation.TRUE);
 
 
-  var val2 = frp.createB([1,4,7,8]);
+  var val2 = frp.createB([1,4,7,1001]);
   var numberInput = new recoil.ui.widgets.InputWidget(scope);
   numberInput.attachStruct({value : val2,
         editable : editableB,
