--- a/src/ui/widgets/table/pagedtable_test.html
+++ b/src/ui/widgets/table/pagedtable_test.html
@@ -126,7 +126,8 @@
 
 //    var  columnsB = frp.createB(columns);
     
-
+    var pageB = frp.createB(1);
+    var countB = frp.createB(10);
 
     var typeFactories = {"int": function(meta) {
         return new recoil.ui.widgets.table.NumberColumn(meta);
@@ -188,7 +189,7 @@
     mtable.addRow(row);
     table.set(mtable.freeze());
     }, table));
-			tableWidget.attach(table, columnsB);
+    tableWidget.attach(table, columnsB, pageB, countB);
 			
     var hideWidget = new recoil.ui.widgets.ButtonWidget(scope);
     var hideHeadersWidget = new recoil.ui.widgets.ButtonWidget(scope);
