--- a/src/structs/table_filter_test.html
+++ b/src/structs/table_filter_test.html
@@ -2,11 +2,11 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Table Join Test</title>
+    <title>Table Filter Test</title>
     <script src="../../../closure-library/closure/goog/base.js"></script>
     <script src="../../../my-deps.js"></script>
     <script>
-        goog.require('recoil.structs.table.JoinTest');
+        goog.require('recoil.structs.table.FilterTest');
     </script>
 </head>
 <body>
