--- a/src/ui/widgets/selector_test.html
+++ b/src/ui/widgets/selector_test.html
@@ -57,7 +57,12 @@ See the COPYING file for details.
     var value = frp.createB({a: 'test'});
     var list = [{a: 'one'}, {a: 'two'}, {a: 'three'}, {a: 'four'}, {a: 'five'}];
     var label = new recoil.ui.widgets.LabelWidget(scope);
-
+    var listB = frp.createNotReadyB();
+  setTimeout(function () {
+      frp.accessTrans(function () {
+	  listB.set(list);
+      });
+  },1000);
     var opt_renderer = function (val, errored, enabled) {
 
         return recoil.ui.widgets.SelectorWidget.RENDERER(val.a, errored, enabled);
@@ -79,7 +84,7 @@ See the COPYING file for details.
 
     recoil.ui.widgets.SelectorWidget.options
             .value(value)
-            .list(list)
+            .list(listB)
             .renderer(opt_renderer)
             .enabledItems(enabledItems)
             .attach(selector);
