allow count to be constant on paged table widget

--- a/src/ui/widgets/table/pagedtable_test.html
+++ b/src/ui/widgets/table/pagedtable_test.html
@@ -23,6 +23,7 @@
   goog.require('recoil.ui.widgets.table.NumberColumn');
   goog.require('recoil.ui.widgets.table.BooleanColumn');
   goog.require('recoil.ui.widgets.table.SelectColumn');
+  goog.require('recoil.structs.table.ColumnKey');
 
 </script>
 <style>
