--- a/src/ui/widgets/table/pagedtable_test.html
+++ b/src/ui/widgets/table/pagedtable_test.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="../../../../../closure-library/closure/goog/css/menuseparator.css">
 <link rel="stylesheet" href="../../../../../closure-library/closure/goog/css/flatmenubutton.css">
 <link rel="stylesheet" href="../../../../../closure-library/closure/goog/css/common.css">
-<link rel="stylesheet" href="table.css">
+<link rel="stylesheet" href="../../css/table.css">
 
 <script>
   goog.require('recoil.frp.Frp');
