--- a/src/structs/tree_test.html
+++ b/src/structs/tree_test.html
@@ -10,7 +10,7 @@ See the COPYING file for details.
 -->
 <head>
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>Check list unit tests - lib.structs.UniquePriorityQueue</title>
+<title>Check list unit tests - lib.structs.Tree</title>
 <script src="../../../closure-library/closure/goog/base.js"></script>
 <script src="../../../my-deps.js"></script>
 <script>
