add rotate table tests

--- a/src/structs/table/join_test.html
+++ b/src/structs/table/join_test.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Table Join Test</title>
+    <title>Join Test - recoil.structs.table.Join</title>
     <script src="../../../../closure-library/closure/goog/base.js"></script>
     <script src="../../../../my-deps.js"></script>
     <script>
