--- a/src/structs/table/rotate_test.html
+++ b/src/structs/table/rotate_test.html
@@ -2,11 +2,11 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Table Test - recoil.structs.table.Table</title>
+    <title>Rotate Test - recoil.structs.table.Rotate</title>
     <script src="../../../../closure-library/closure/goog/base.js"></script>
     <script src="../../../../my-deps.js"></script>
     <script>
-        goog.require('recoil.structs.table.TableTest');
+        goog.require('recoil.structs.table.RotateTest');
     </script>
 </head>
 <body>
