--- a/src/structs/table/union_test.html
+++ b/src/structs/table/union_test.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Table Union Test</title>
+    <title>Union Test - recoil.structs.table.Union</title>
     <script src="../../../../closure-library/closure/goog/base.js"></script>
     <script src="../../../../my-deps.js"></script>
     <script>
