--- a/src/structs/table/mapcolumns_test.html
+++ b/src/structs/table/mapcolumns_test.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Table Map Test</title>
+    <title>MapColumns Test - recoil.structs.table.MapColumns</title>
     <script src="../../../../closure-library/closure/goog/base.js"></script>
     <script src="../../../../my-deps.js"></script>
     <script>
