Updated ipv6converter validation

--- a/src/ui/widgets/input_manual_test.html
+++ b/src/ui/widgets/input_manual_test.html
@@ -89,7 +89,7 @@
       editable: editableB,
       enabled: enabledB,
       immediate: true,
-      converter: new recoil.converters.IPv6AddressConverter(true, true, false),
+      converter: new recoil.converters.IPv6AddressConverter(true, false, false),
       classes: ['ipv6-textfield']
   });
 
