isEquals should check function fix and add unit tests for changing cell decorators and widget factories

--- a/src/ui/widgets/table/table_widget_manual_test.html
+++ b/src/ui/widgets/table/table_widget_manual_test.html
@@ -139,16 +139,17 @@
     }};
 
     var tableX = frp.createB(recoil.structs.table.Table.create(typeFactories, rawTableMeta, rawTable));
+    var wfact = function (scope, cellB) {
+	var widget = new recoil.ui.widgets.LabelWidget(scope);
+	var value = recoil.frp.table.TableCell.getValue(frp, cellB);
+	
+	widget.attachStruct({name : value});
+	console.log("args", arguments);
+	return widget;
+    }
     var table = frp.liftBI(function () {
 	var res = tableX.get().unfreeze();
-	res.setCellMeta([1],tblKeys.name, {cellWidgetFactory : function (scope, cellB) {
-	    var widget = new recoil.ui.widgets.LabelWidget(scope);
-	    var value = recoil.frp.table.TableCell.getValue(frp, cellB);
-	    
-	    widget.attachStruct({name : value});
-	    console.log("args", arguments);
-	    return widget;
-	}});
+	res.setCellMeta([1],tblKeys.name, {cellWidgetFactory : wfact});
 	return res.freeze();
     },
 			   function (t) {
