--- a/src/frp/logic_test.html
+++ b/src/frp/logic_test.html
@@ -2,7 +2,8 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title></title>
+    <title>Recoil Unit Tests - recoil.frp.logic</title>
+    
     <script src="../../../closure-library/closure/goog/base.js"></script>
     <script src="../../../my-deps.js"></script>
     <script>
@@ -10,6 +11,5 @@
     </script>
 </head>
 <body>
-
 </body>
 </html>
