add text area column and work on text area widget

--- a/src/ui/widgets/textarea_manual_test.html
+++ b/src/ui/widgets/textarea_manual_test.html
@@ -24,6 +24,7 @@
 <div>
     <div id="textarea1-label"/>
     <div id="textarea1"></div>
+    <button onclick='goog.dom.removeNode(textarea1)'>Remove</button>
 </div>
 
 
