make a generic makeStructColumn that attaches any widget that matches the attachstruct pattern with value as the value

--- a/src/ui/booleanwithexplain_test.html
+++ b/src/ui/booleanwithexplain_test.html
@@ -1,13 +1,15 @@
-goog.provide('recoil.ui.BoolWithExplanationTest');
+<!DOCTYPE html>
+<html>
+<head lang="en">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Recoil Unit Tests - recoil.ui.BoolWithExplanation</title>
+  <script src="../../../closure-library/closure/goog/base.js"></script>
+  <script src="../../../my-deps.js"></script>
+  <script>
+    goog.require('recoil.ui.BoolWithExplanationTest');
+  </script>
+</head>
+<body>
 
-
-goog.require('goog.testing.jsunit');
-goog.require('recoil.ui.BoolWithExplanation');
-
-goog.setTestOnly('recoil.ui.BoolWithExplanationTest');
-
-function testIt() {
-    assertTrue("Not implemented yet", false);
-}
-
-
+</body>
+</html>
