--- a/src/debugger/statewatcher_manual_test.html
+++ b/src/debugger/statewatcher_manual_test.html
@@ -113,7 +113,7 @@ See the COPYING file for details.
 <body>
   <h1>recoil.debugger.StateWatcher</h1>
   <div id="div-console"></div>
-
+  <button onclick="doChange()">Change</button>
   <div id="treeContainer" style="width:100%"></div>
 
   <script>
@@ -127,11 +127,21 @@ See the COPYING file for details.
     var aB1 = frp.createB('hi');
     var notReady1 = frp.createNotReadyB();
     var errorB1 = frp.createMetaB(recoil.frp.BStatus.errors(['an error']));
+    var changing = [
+       ];
     var bB = frp.liftB(function (v) {
     return v + '1';
     }, aB1);
+    var b1B = frp.liftB(function (v) {
+    return v + '2';
+    }, aB1);
+
+    var b2B = frp.liftB(function (v) {
+    return v + '3';
+    }, aB1);
 
     frp.attach(bB);
+    frp.attach(b1B);
     frp.attach(errorB1);
     frp.attach(notReady1);
     
@@ -157,7 +167,18 @@ See the COPYING file for details.
 
     var watcher = new recoil.debugger.StateWatcher($('treeContainer'));
 
-    watcher.setState(null, bB);
+    var cur = 0;
+    var items = [bB, b1B, b2B];
+    watcher.setState(items[cur], []);
+
+    function doChange() {
+        console.log("change");
+        cur = (cur + 1) % items.length;
+        changing.push(cur);
+         watcher.setState(items[cur], [{name:'changing', val: changing}]);
+    }
+       
+
     var logger = goog.debug.LogManager.getRoot();
 
     function makeTree() {
